Update 'cpq8wdkri-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:a0aec8ed1f593a5b039591a54ff3f79558109248@sha256:00892d6857588dd436871b4dfc03cb417b8a0d72956f56b9b8ea9e6c54b0d7c6

--- a/components/cpq8wdkri-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/cpq8wdkri-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: cpq8wdkri-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:a0aec8ed1f593a5b039591a54ff3f79558109248@sha256:00892d6857588dd436871b4dfc03cb417b8a0d72956f56b9b8ea9e6c54b0d7c6
+          name: container-image
